--- a/style.css
+++ b/style.css
@@ -56,9 +56,10 @@ body {
 }
 
 .hero-image img {
-  width: 75%;
+  width: auto;
+  height: 85%;
+  max-height: 600px;
   max-width: 400px;
-  height: auto;
   filter: grayscale(100%);
 }
 
