--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #0a0a0a;
+  background-color: #000000;
 }
 
 .hero-text h1 {
